// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with NaN color 1`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-guDMob eLbYwR flwiGj"
    color="primary"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 2`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-dmyDmy eLbYwR hKJGHq"
    color="primary"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 3`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-guDMob iXEzvn ksjnbt"
    color="danger"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 4`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-dmyDmy iXEzvn fDCiuk"
    color="danger"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 5`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-guDMob emNkql frdSKi"
    color="default"
    type="button"
    variant="outlined"
  />
</DocumentFragment>
`;

exports[`renders with NaN color 6`] = `
<DocumentFragment>
  <button
    class="sc-beyTiQ sc-dmyDmy emNkql nznlj"
    color="default"
    type="button"
    variant="link"
  />
</DocumentFragment>
`;
